# PAYYMO-OPEN-BANKING-V1.1

./: INSTALL.md  NEXT_STEPS.md  README.md  add_test_data.py  backup_chat.py  certificate_validation_test.py  check_backups.py  conversation_export.json  create_test_tenant.py  dashboard_switcher.py  db_upgrade.py  index.html  main.py  package_contents.txt  pyproject.toml  replit.nix  run_backup_loop.sh  sample_section_identifiers_implementation.md  start_fresh_dashboard.sh  technical_document_section_ids.md  test_auth.py  theme_viewer.py  zip_essential.sh  zip_project.sh  zip_project_management.sh
AA - FINAL MD APRIL 10/: 06 Form Engine Management (Updated).md  09 Error Handling Debugging (Updated).md  11 Backup, Recovery & Safety (Enhanced for AI Workflow).md  14 Third Party Integrations (Expanded with Core API).md  16 Accessibility Compliance (Technically Expanded).md  17 Performance Optimization Standards (Comprehensive Expansion).md  AI Agent Guidelines (User Revision).md  Admin Feedback & Project Tracking System Guide.md  CORE CODING STANDARDS (User Revision).md  CORE TECH STACK (Updated).md  UI Design System Architecture & Guidelines (Final Enhancements).md
Handovers/: 20250414_project_management_improvement.md  20250415_comprehensive_system_status.md  chat_history_2025-03-22_01-26-50.json  chat_history_2025-03-22_20-04-10.json  chat_history_2025-03-23_01-25-18.json  session_20250415_handover.md
approved_revisions/: revisions_index.json
attached_assets/: PROJECT-AUDIT.md  (+4 more)
chat_history/: chat_history_2025-03-22_01-24-34.json
docs/: database_migrations.md  (+4 more)
(+856 files in other folders)
